@@ -37,13 +37,16 @@ ext/oci8/object.c
 ext/oci8/xmldb.c
 lib/.document
 lib/oci8.rb.in
-lib/DBD/OCI8/OCI8.rb
+lib/dbd/OCI8.rb
 lib/oci8/.document
 lib/oci8/compat.rb
 lib/oci8/datetime.rb
+lib/oci8/encoding-init.rb
+lib/oci8/encoding.yml
 lib/oci8/metadata.rb
 lib/oci8/object.rb
 lib/oci8/oci8.rb
+lib/oci8/oracle_version.rb
 test/README
 test/config.rb
 test/test_all.rb
@@ -58,6 +61,7 @@ test/test_dbi.rb
 test/test_dbi_clob.rb
 test/test_metadata.rb
 test/test_oci8.rb
+test/test_oracle_version.rb
 test/test_oradate.rb
 test/test_oranumber.rb
 test/test_rowid.rb
